k8s/api-gateway-v2/basic/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
name: my-api-gateway
namespace: default
spec:
gatewayClassName: consul-api-gateway
listeners:
- name: http
  port: 80
  protocol: http
