k8s/api-gateway-v2/basic/resources/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
	name: my-http-route
	namespace: default
spec:
	parentRefs:
	- name: api-gateway
	  namespace: default
	rules:
	- matches:
	  - path:
		type: PathPrefix
		value: /v1
	  backendRefs:
	  - kind: Service
	    name: backend
	    port: 8080
	- matches:
	  - path:
		type: PathPrefix
		value: /v2
	  backendRefs:
	  - kind: Service
	    name: backend
	    port: 9090
